Closed Bug 587103 Opened 16 years ago Closed 15 years ago

AIX: 6 source files fail to compile in xlC due to template/static inline scoping

Categories

(Core :: JavaScript Engine, defect)

PowerPC
AIX
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: andrew, Assigned: andrew)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file, 1 obsolete file)

Attached patch jstypedarray.diff (obsolete) — Splinter Review
TypedArrayTemplate is (obviously) a template, and it is referencing INT_TO_JSVAL, a static inline function, without prefixing it with "::". This breaks xlC because it can not resolve INT_TO_JSVAL. The standard does not require that statics be considered if the unqualified name is not found in the context of the template arguments. g++ does this fallback, xlC does not.
Example error: "jstypedarray.cpp", line 545.19: 1540-0274 (S) The name lookup for "INT_TO_JSVAL" did not find a declaration. "jstypedarray.cpp", line 545.19: 1540-1292 (I) Static declarations are not considered for a function call if the function is not qualified.
Attachment #465762 - Attachment is patch: true
Attachment #465762 - Attachment mime type: application/octet-stream → text/plain
Refreshing this bug, as the existing patch is for a much older version. Back then, only this file failed. Now I have a new patch against trunk which fixes this same exact issue now present in the following files: +++ b/js/src/jsclone.cpp Wed Dec 22 16:59:11 2010 -0500 +++ b/js/src/jsgc.cpp Wed Dec 22 16:59:11 2010 -0500 +++ b/js/src/jsgcinlines.h Wed Dec 22 16:59:11 2010 -0500 +++ b/js/src/jsiter.cpp Wed Dec 22 16:59:11 2010 -0500 +++ b/js/src/jstypedarray.cpp Wed Dec 22 16:59:11 2010 -0500 +++ b/js/src/v8-dtoa/checks.h Wed Dec 22 16:59:11 2010 -0500
Summary: jstypedarray.cpp fails to compile under AIX/xlC due to template/static inline scoping → AIX: 6 source files fail to compile in xlC due to template/static inline scoping
Attachment #465762 - Attachment is obsolete: true
Attachment #499380 - Flags: review?(mrbkap)
Attachment #499380 - Flags: approval2.0?
Comment on attachment 499380 [details] [diff] [review] Properly scope external calls in templated functions r+ before a?, please
Attachment #499380 - Flags: approval2.0? → approval2.0-
Attachment #499380 - Flags: review?(mrbkap) → review+
Assignee: general → andrew
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: