Bug 587103.  Properly scope external calls in templated functions to fix compilation with some compilers.  r=mrbkap